# clusterator

./: CMakeLists.txt  LICENSE  README.md
example_data/: ._input0.txt  ._input1.txt  ._input2.txt  ._input3.txt  ._input4.txt  ._output0.txt  ._output1.txt  ._output2.txt
src/: main.cpp
